--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.12.1",
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
     "@types/react": "^18.0.21",
@@ -18,6 +19,7 @@
     "astro-icon": "^0.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sharp": "^0.31.2",
     "tailwindcss": "^3.0.24"
   }
 }
