--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.12.1",
+    "@astrojs/netlify": "^1.3.0",
     "@astrojs/react": "^1.2.2",
     "@astrojs/tailwind": "^2.1.3",
     "@types/react": "^18.0.21",
