--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "^2.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "remark": "^14.0.2",
     "sharp": "^0.31.2",
     "tailwindcss": "^3.0.24"
   }
