--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@astrojs/image": "^0.12.1",
     "@astrojs/netlify": "^1.3.0",
     "@astrojs/react": "^1.2.2",
+    "@astrojs/sitemap": "^1.3.2",
     "@astrojs/tailwind": "^2.1.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "astro": "^1.9.2",
     "astro-icon": "^0.8.0",
+    "astro-robots-txt": "^0.5.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
