--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^1.9.2",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.5.0",
+    "astro-seo": "^0.7.4",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
