--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "astro": "^1.9.2",
+    "astro-compress": "^1.1.47",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.5.0",
-    "astro-seo": "^0.7.4",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
