--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/minimal",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -10,22 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.12.1",
     "@astrojs/netlify": "^1.3.0",
     "@astrojs/react": "^1.2.2",
-    "@astrojs/sitemap": "^1.3.2",
-    "@astrojs/tailwind": "^2.1.3",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "astro": "^1.9.2",
-    "astro-compress": "^1.1.47",
-    "astro-icon": "^0.8.0",
+    "@astrojs/sitemap": "^1.4.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^3.0.7",
+    "astro-icon": "^0.8.1",
     "astro-robots-txt": "^0.5.0",
     "prettier": "^2.8.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remark": "^14.0.2",
+    "remark": "^14.0.3",
     "sharp": "^0.31.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.0.24"
   }
 }
